change google verification

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
         <meta name="msapplication-TileColor" content="#da532c" />
         <meta name="theme-color" content="#ffffff" />
 
+        <meta name="google-site-verification" content="8lYqYzLQmj8dxXoC-9we9HnUkNA02KtAea25BmVmYPs" />
+
         <script>
             window.location.replace('https://harryyep.com');
         </script>
